[FIX] Fix canvas height to avoid scroll on mobile

--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -38,7 +38,7 @@ $color-info: #4ad5e2;
 
 #gradient {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
